WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284379
AX: scroll views shouldn't be ignored when they have a remote frame child
https://bugs.webkit.org/show_bug.cgi?id=284379
Summary
AX: scroll views shouldn't be ignored when they have a remote frame child
Joshua Hoffman
Reported
2024-12-10 10:03:41 PST
ScrollView shouldn't be ignored when it has a remote child
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-10 10:03:55 PST
<
rdar://problem/141228277
>
Joshua Hoffman
Comment 2
2024-12-10 10:06:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37715
EWS
Comment 3
2024-12-11 15:21:36 PST
Committed
287701@main
(03436a4ea53a): <
https://commits.webkit.org/287701@main
> Reviewed commits have been landed. Closing PR #37715 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug