AX: scroll views shouldn't be ignored when they have a remote frame child https://bugs.webkit.org/show_bug.cgi?id=284379 rdar://problem/141228277

Reviewed by Tyler Wilcock.

We can't ignore scroll view's when they have remote children—this leads to missing content
on the isolated tree, since this scroll view is being requested.

A new testing method was added to AccessibilityUIElement, childAtIndexWithRemoteElement,
for validating the existence of a remote frame.

* LayoutTests/http/tests/site-isolation/accessibility/hit-test-resolving-remote-frame.html:
* LayoutTests/http/tests/site-isolation/accessibility/hit-test-returns-remote-frame.html:
* LayoutTests/http/tests/site-isolation/accessibility/remote-element-returned-expected.txt: Added.
* LayoutTests/http/tests/site-isolation/accessibility/remote-element-returned.html: Added.
* Source/WebCore/accessibility/AccessibilityScrollView.cpp:
(WebCore::AccessibilityScrollView::computeIsIgnored const):
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperBase.h:
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
(makeNSArray):
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.h:
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityArrayAttributeValues:index:maxCount:]):
(-[WebAccessibilityObjectWrapper _accessibilityChildrenFromIndex:maxCount:returnPlatformElements:]):
* Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp:
(WTR::AccessibilityUIElement::elementAtPointWithRemoteElement):
(WTR::AccessibilityUIElement::elementAtPointResolvingRemoteFrame):
(WTR::AccessibilityUIElement::childAtIndexWithRemoteElement):
(WTR::AccessibilityUIElement::elementAtPointWithRemoteElementForTesting): Deleted.
(WTR::AccessibilityUIElement::elementAtPointResolvingRemoteFrameForTesting): Deleted.
* Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
* Tools/WebKitTestRunner/InjectedBundle/Bindings/AccessibilityUIElement.idl:
* Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::childAtIndexWithRemoteElement):
(WTR::AccessibilityUIElement::elementAtPointWithRemoteElement):
(WTR::AccessibilityUIElement::elementAtPointResolvingRemoteFrame):
(WTR::AccessibilityUIElement::elementAtPointWithRemoteElementForTesting): Deleted.
(WTR::AccessibilityUIElement::elementAtPointResolvingRemoteFrameForTesting): Deleted.

Canonical link: https://commits.webkit.org/287701@main