Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h
@@ -89,11 +89,12 @@ public:
     JSRetainPtr<JSStringRef> domIdentifier() const;
 
     RefPtr<AccessibilityUIElement> elementAtPoint(int x, int y);
-    RefPtr<AccessibilityUIElement> elementAtPointWithRemoteElementForTesting(int x, int y);
-    void elementAtPointResolvingRemoteFrameForTesting(JSContextRef, int x, int y, JSValueRef callback);
+    RefPtr<AccessibilityUIElement> elementAtPointWithRemoteElement(int x, int y);
+    void elementAtPointResolvingRemoteFrame(JSContextRef, int x, int y, JSValueRef callback);
 
     JSValueRef children(JSContextRef);
     RefPtr<AccessibilityUIElement> childAtIndex(unsigned);
+    RefPtr<AccessibilityUIElement> childAtIndexWithRemoteElement(unsigned);
     unsigned indexOfChild(AccessibilityUIElement*);
     unsigned childrenCount();
     RefPtr<AccessibilityUIElement> titleUIElement();
