Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm
@@ -98,6 +98,7 @@ typedef void (*AXPostedNotificationCallback)(id element, NSString* notification,
 - (BOOL)accessibilityReplaceRange:(NSRange)range withText:(NSString *)string;
 - (BOOL)accessibilityInsertText:(NSString *)text;
 - (NSArray *)accessibilityArrayAttributeValues:(NSString *)attribute index:(NSUInteger)index maxCount:(NSUInteger)maxCount;
+- (NSArray *)_accessibilityChildrenFromIndex:(NSUInteger)index maxCount:(NSUInteger)maxCount returnPlatformElements:(BOOL)returnPlatformElements;
 - (NSUInteger)accessibilityIndexOfChild:(id)child;
 - (NSUInteger)accessibilityArrayAttributeCount:(NSString *)attribute;
 - (void)_accessibilityScrollToMakeVisibleWithSubFocus:(NSRect)rect;
@@ -484,6 +485,16 @@ Vector<RefPtr<AccessibilityUIElement>> AccessibilityUIElement::getChildrenInRang
     return { };
 }
 
+RefPtr<AccessibilityUIElement> AccessibilityUIElement::childAtIndexWithRemoteElement(unsigned index)
+{
+    RetainPtr<NSArray> children;
+    s_controller->executeOnAXThreadAndWait([&children, index, this] {
+        children = [m_element _accessibilityChildrenFromIndex:index maxCount:1 returnPlatformElements:NO];
+    });
+    auto resultChildren = makeVector<RefPtr<AccessibilityUIElement>>(children.get());
+    return resultChildren.size() == 1 ? resultChildren[0] : nullptr;
+}
+
 JSRetainPtr<JSStringRef> AccessibilityUIElement::customContent() const
 {
     BEGIN_AX_OBJC_EXCEPTIONS
@@ -546,7 +557,7 @@ RefPtr<AccessibilityUIElement> AccessibilityUIElement::elementAtPoint(int x, int
     return AccessibilityUIElement::create(element.get());
 }
 
-RefPtr<AccessibilityUIElement>  AccessibilityUIElement::elementAtPointWithRemoteElementForTesting(int x, int y)
+RefPtr<AccessibilityUIElement>  AccessibilityUIElement::elementAtPointWithRemoteElement(int x, int y)
 {
     RetainPtr<id> element;
     s_controller->executeOnAXThreadAndWait([&x, &y, &element, this] {
@@ -559,7 +570,7 @@ RefPtr<AccessibilityUIElement>  AccessibilityUIElement::elementAtPointWithRemote
     return AccessibilityUIElement::create(element.get());
 }
 
-void AccessibilityUIElement::elementAtPointResolvingRemoteFrameForTesting(JSContextRef context, int x, int y, JSValueRef jsCallback)
+void AccessibilityUIElement::elementAtPointResolvingRemoteFrame(JSContextRef context, int x, int y, JSValueRef jsCallback)
 {
     JSValueProtect(context, jsCallback);
     s_controller->executeOnAXThreadAndWait([x, y, protectedThis = Ref { *this }, jsCallback = WTFMove(jsCallback), context = JSRetainPtr { JSContextGetGlobalContext(context) }] () mutable {
